fix: update coupon model